@@ -1,3 +1,5 @@
+HEAD
+	+ Use IP address on CUPS admin URL to avoid bad request errors
 3.4
 	+ Skip internal groups in printer ACL model
 	+ Use service instead of deprecated invoke-rc.d for init.d scripts
